<resources>
    <string name="app_name">Easy Meal</string>
    <string name="welcome_activity_background_description">Welcome Activity background image.</string>
    <string name="welcome_activity_title_text">Let’s\nCooking</string>
    <string name="welcome_activity_main_text">Find best recipes for cooking</string>
    <string name="start_cooking">Start cooking</string>
    <string name="not_yet_registered">Not Registered Yet, Sign Up!</string>
    <string name="sign_in">Sign In</string>
    <string name="type_passwd">Type Your Password</string>
    <string name="type_email">Type your Email</string>
    <string name="auth_activity_title">Welcome,\nSign In to continue</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="auth_error">Authentication error, please try again later.</string>
    <string name="auth_fail">Authentication fail, please check entered information or try again later.</string>
    <string name="database_error">Database error, please try again later.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered, Sign In!</string>
    <string name="retype_password">Retype Your Password</string>
    <string name="register_activity_title">Welcome,\nSign Up to continue</string>
    <string name="empty_input_field">Field is empty</string>
    <string name="not_valid_password">Password must be at least 6 characters</string>
    <string name="passwords_dont_match">Passwords don\'t match, please try again.</string>
    <string name="not_valid_email">A valid email is required</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="successful_update">Data was successfully updated</string>
    <string name="invalid_data">Invalid data</string>
    <string name="no_permissions">Without permissions application will not work properly</string>
    <string name="home">Home</string>
    <string name="image_upload">Uploading image</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_recipe">Add recipe</string>
    <string name="profile">Profile</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_title">Find best recipes \nfor cooking</string>
    <string name="home_fragment_search_hint">Search recipes</string>
    <string name="voice_search_content_desc">Search recipes with voice</string>
    <string name="trending_now">Trending now 🔥</string>
    <string name="see_all">See all</string>
    <string name="popular_category">Popular category</string>
    <string name="popular_creators">Popular creators</string>
    <string name="trending_recipes_stars">  %1$.1f</string>
    <string name="recipe_author">By %1$s</string>
    <string name="author">Author: </string>
    <string name="create_recipe_title">Create recipe</string>
    <string name="add_photo_to_recipe">Add photo to recipe</string>
    <string name="recipe_title">Recipe title</string>
    <string name="serves">Serves</string>
    <string name="serves_count">%1$02d</string>
    <string name="arrow_right">Arrow right</string>
    <string name="cook_time">Cook time</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_category">Recipe category</string>
    <string name="single_string_pick">%1$s</string>
    <string name="add_new_ingredient">Add new ingredient</string>
    <string name="save_my_recipe">Save my recipe</string>
    <string name="recipe_process">Recipe process</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="remove_ingredient">Remove ingredient</string>
    <string name="serves_hint">serves count</string>
    <string name="cook_time_hint">cook time</string>
    <string name="category_hint">category</string>
    <string name="img_upload_success">Successfully uploaded image</string>
    <string name="img_upload_failure">Failure with uploading image</string>
    <string name="my_profile">My profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user">User User</string>
    <string name="bio_sample">Hello I`m User User, I`m from Kazakhstan 🇰🇿 I love cooking so much!</string>
    <string name="recipes">Recipes:</string>
    <string name="type_name">Type your name</string>
    <string name="type_lastname">Type your lastname</string>
    <string name="type_age">Type your age</string>
    <string name="commit">Commit</string>
    <string name="recipe_overview">%1$d Ingredients | %2$d min | %3$s</string>
    <string name="please_add_photo">Please add photo to recipe</string>
    <string name="type_bio">Type information about you</string>
    <string name="logout">Logout</string>
    <string name="are_sure_to_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="items_count">%1$d Items</string>
    <string name="ingredient_count">%1$dg</string>
    <string-array name="recipe_category">
        <item>Appetizer</item>
        <item>Cold platter</item>
        <item>Hot appetizer</item>
        <item>Salad</item>
        <item>Soup</item>
        <item>Meat</item>
        <item>Meat dish</item>
        <item>Poultry dish</item>
        <item>Fish and seafoods</item>
        <item>Sauces</item>
        <item>Desserts</item>
        <item>Other</item>
    </string-array>
</resources>